<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/EventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:hint="@string/pop_up_name"
                android:inputType="textCapWords"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/EventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Date"
                android:inputType="none"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/EventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Time"
                android:inputType="none"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/locationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Location"
                android:inputType="none"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/phone_number_optional"
                android:inputType="phone"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/coverFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/cover_fee_optional"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <CheckBox
                        android:id="@+id/ageCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_19"
                        android:textColor="@android:color/darker_gray"
                        app:buttonTint="@android:color/darker_gray" />

                    <CheckBox
                        android:id="@+id/byobCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/byob"
                        android:textColor="@android:color/darker_gray"
                        app:buttonTint="@android:color/darker_gray" />
                </TableRow>

            </TableLayout>

            <RadioGroup
                android:id="@+id/radioprivacy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/radioInvite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/invite_only" />

                <RadioButton
                    android:id="@+id/radioFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friends_only" />

                <RadioButton
                    android:id="@+id/radioPublic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/publicpp" />
            </RadioGroup>

            <Button
                android:id="@+id/postEvent"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:text="@string/post_pop_up" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
